gridstyles.css
html{
    background-color: rgb(10, 10, 10);
    box-shadow: 0 80px 80px 0 rgba(0, 0, 0, 0.2);
}

.header{
    background-color: rgb(39, 39, 39);
    border-radius: 8px;
    font-size: large;
    color: white;
    padding: 0.5%;
    margin: 0.5%;
}

.grid {
    margin: 10px;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    justify-content: center;
    grid-gap: 15px;
}
.grid-item{
    background-color: rgb(53, 53, 53);
    padding: 2%;
    height: 220px;
    color: white;
    border: 3px solid #39003f;
    border-radius: 8px;
    padding: .5rem;
    box-shadow: 0 4px 8px 0 rgba(94, 94, 94, 0.2);
    transition: height 1s;
    
}

.grid-item:hover{
    background-color: rgb(39, 39, 39);
    height: 230px;
}

div.content {
    padding: 5% 0% 5% 0%;
}

.grid-sub{
    display: grid;
    grid-template-columns: auto auto auto;
}

